disabled popovers on focus

--- a/challenges/index.html
+++ b/challenges/index.html
@@ -7,37 +7,37 @@
     <body>
         <div class = 'userInput' id = 'opposite'><strong>Get the Opposite Number</strong><br>
             <input type = 'text' class = 'input' id = 'opposite-input' placeholder = 'Enter number'><button onclick = 'runOpposite()'>Submit</button>
-            <button type="button" id = 'opp-learn-btn' class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Takes any number and returns the opposite number">Learn More</button></div>
+            <button type="button" id = 'opp-learn-btn' class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Takes any number and returns the opposite number">Learn More</button></div>
         <div class = 'output' id = 'opposite-outer'>Answer<div class = 'answer' id = 'opposite-output'></div></div>
 
         <div class = 'userInput' id = 'likes'><strong>Likes Emulator</strong><br>
         <input type = 'text' class = 'input'  id = 'likes-input' placeholder = 'Enter name(s)'><button onclick = 'runLikes()'>Submit</button>
-            <button type="button" id = 'like-learn-btn' class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Takes an arbitrary amount of names and generates a response similar to Facebook likes.For example: Sam likes this! Enter any number of names in the input">Learn More</button></div>
+            <button type="button" id = 'like-learn-btn' class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Takes an arbitrary amount of names and generates a response similar to Facebook likes.For example: Sam likes this! Enter any number of names in the input">Learn More</button></div>
         <div class = 'output' id = 'likes-outer'>Answer<div class = 'answer' id = 'likes-output'></div></div>
 
         <div class = 'userInput' id = 'digitalRoot'><strong>Find the Digital Root</strong><br>
             <input type = 'text' class = 'input' id = 'digital-input' placeholder = 'Enter Number'><button onclick = 'runDigital()'>Submit</button>
-            <button type="button" id = 'digital-learn-btn' class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="The Digital root is the sum of all integers contained in a number and repeated until the sum is a single digit integer. For example: the digital root of 26 is 8!">Learn More</button></div>
+            <button type="button" id = 'digital-learn-btn' class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The Digital root is the sum of all integers contained in a number and repeated until the sum is a single digit integer. For example: the digital root of 26 is 8!">Learn More</button></div>
         <div class = 'output' id = 'digital-outer'>Answer<div class = 'answer' id = 'digital-output'></div></div>
 
         <div class = 'userInput' id = 'highLow'><strong>Highest and Lowest number</strong><br>
             <input type = 'text' class = 'input' id = 'highlow-input' placeholder = 'Enter Number'><button onclick = 'runHighLow()'>Submit</button>
-            <button type="button" id = 'highlow-learn-btn'class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Finds the highest and lowest integer in a string of integers.">Learn More</button></div>
+            <button type="button" id = 'highlow-learn-btn'class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Finds the highest and lowest integer in a string of integers.">Learn More</button></div>
         <div class = 'output' id = 'highlow-outer'>Answer<div class = 'answer' id = 'highlow-output'></div></div>
 
         <div class = 'userInput' id = 'myAtoi'><strong>My Atoi</strong><br>
             <input type = 'text' class = 'input' id = 'myAtoi-input' placeholder = 'Enter string'><button onclick = 'runAtoi()'>Submit</button>
-            <button type="button" id = 'myAtoi-learn-btn'class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="The myAtoi function converts a string to a 32-bit signed integer. It ignores leading whitespace and checks if a character is a '+' or '-'. Once an integer is found it reads into each following character until a non-integer is found and returns total string of integers with correct sign. If no digits are read then it returns 0">Learn More</button></div>
+            <button type="button" id = 'myAtoi-learn-btn'class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The myAtoi function converts a string to a 32-bit signed integer. It ignores leading whitespace and checks if a character is a '+' or '-'. Once an integer is found it reads into each following character until a non-integer is found and returns total string of integers with correct sign. If no digits are read then it returns 0">Learn More</button></div>
         <div class = 'output' id = 'myAtoi-outer'>Answer<div class = 'answer' id = 'myAtoi-output'></div></div>
 
         <div class = 'userInput' id = 'persistence'><strong>Persistence</strong><br>
             <input type = 'text' class = 'input' id = 'persist-input' placeholder = 'Enter Number'><button onclick = 'runPersist()'>Submit</button>
-            <button type="button" id = 'persist-learn-btn' class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="This multiplies all integers contained in a number and repeated until the result is a single digit integer">Learn More</button></div>
+            <button type="button" id = 'persist-learn-btn' class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="This multiplies all integers contained in a number and repeated until the result is a single digit integer">Learn More</button></div>
         <div class = 'output' id = 'persist-outer'>Answer<div class = 'answer' id = 'persist-output'></div></div>
 
         <div class = 'userInput' id = 'planeSeat'><strong>Where's my Plane Seat</strong><br>
             <input type = 'text' class = 'input'  id = 'planeSeat-input' placeholder = 'Enter plane seat'><button onclick = 'runPlaneSeat()'>Submit</button>
-            <button type="button" id = 'planeSeat-learn-btn'class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content=" Takes a plane seat location for a standard commercial jet and gives you directions on where to find it in a plane. For example: 22K or 13B">Learn More</button></div>
+            <button type="button" id = 'planeSeat-learn-btn'class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content=" Takes a plane seat location for a standard commercial jet and gives you directions on where to find it in a plane. For example: 22K or 13B">Learn More</button></div>
         <div class = 'output' id = 'planeSeat-outer'>Answer<div class = 'answer' id = 'planeSeat-output'></div></div>
 
         <script src = 'Likes.js'></script>
