--- a/default page/links.html
+++ b/default page/links.html
@@ -3,6 +3,7 @@
         <link rel='stylesheet' type='text/css' href='style.css' /> 
     </head>
 <h1>Important Links</h1>
-    <p><a href = 'https://github.com/samswaringen'>Github</a><br>
-           <a href = 'https://www.linkedin.com/in/sam-swaringen-245611207/'>Linkedin</a> </p>  
+    <p><a href = 'https://github.com/samswaringen' target = 'blank'>Github</a><br>
+           <a href = 'https://www.linkedin.com/in/sam-swaringen-245611207/' target = 'blank'>Linkedin</a></p>  
+    <p>Contact me at <strong>samswaringen@gmail.com</strong></p>
 </html>
