--- a/challenges/index.html
+++ b/challenges/index.html
@@ -20,7 +20,7 @@
             <button type="button" id = 'digital-learn-btn' class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The Digital root is the sum of all integers contained in a number and repeated until the sum is a single digit integer. For example: the digital root of 26 is 8!">Learn More</button></div>
         <div class = 'output' id = 'digital-outer'>Answer<div class = 'answer' id = 'digital-output'></div></div>
 
-        <div class = 'userInput' id = 'highLow'><strong>Highest and Lowest number</strong><br>
+        <div class = 'userInput' id = 'highLow'><strong>High and Low number</strong><br>
             <input type = 'text' class = 'input' id = 'highlow-input' placeholder = 'Enter Number'><button onclick = 'runHighLow()'>Submit</button>
             <button type="button" id = 'highlow-learn-btn'class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Finds the highest and lowest integer in a string of integers.">Learn More</button></div>
         <div class = 'output' id = 'highlow-outer'>Answer<div class = 'answer' id = 'highlow-output'></div></div>
