--- a/eyes/index.html
+++ b/eyes/index.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
     <div class="eyes" id = 'eyes'></div>
 </body>
-<script src="./eyes.js"></script>
+<script src="eyes.js"></script>
 
 </html>
