--- a/week4/index.html
+++ b/week4/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Simulation - Scheduler</title>
+    <title>PacMan Eraser</title>
     <link rel="stylesheet" type="text/css" href="style.css" />    
 </head>
 <div id = 'scoreBoard'>
