--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -25,19 +25,19 @@
           </div>
         <div id = 'div1'>
           <img id = 'file1' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link1' class = 'links' style = 'height:35; top: 109'>Coming Soon!</div>
-          <a href = '../default%20page/aboutme.html' id = 'website1' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend1'></div></a>
+          <a href = 'https://samswaringen.github.io/comingsoon' id = 'website1' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend1'></div></a>
         </div>
       <div id = 'div2'>
           <img id = 'file2' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link2' class = 'links' style = 'height:35; top: 109'>Coming Soon!</div>
-          <a href = '../default%20page/aboutme.html' id = 'website2' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend2'></div></a>
+          <a href = 'https://samswaringen.github.io/comingsoon' id = 'website2' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend2'></div></a>
         </div>
       <div id = 'div3'>
           <img id = 'file3' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link3' class = 'links' style = 'height:35; top: 109'>Coming Soon!</div>
-          <a href = '../default%20page/aboutme.html'id = 'website3' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend3'></div></a>
+          <a href = 'https://samswaringen.github.io/comingsoon'id = 'website3' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend3'></div></a>
         </div>
       <div id = 'div4'>
           <img id = 'file4' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link4' class = 'links' style = 'height:35; top: 109'>Coming Soon!</div>
-          <a href = '../default%20page/aboutme.html'id = 'website4' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend4'></div></a>
+          <a href = 'https://samswaringen.github.io/comingsoon'id = 'website4' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend4'></div></a>
         </div>
       <div id = 'div5'>
           <img id = 'file5' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link5' class = 'links' style = 'height:35; top: 109'><img src='eyeE.png' class = 'eye' width = '15' height = '15'>y<img src='eyeE.png' class = 'eye' width = '15' height = '15'>s</div>
