--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -15,13 +15,13 @@
         <link rel='stylesheet' type='text/css' href='style.css' /> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     </head> 
-    <body style = 'background-image: url(blackandwhite.png);'>
+    <body>
       <div id = 'header'>Projects Portfolio</div>
       <div id = 'navBarDiv'></div>
       <div id = 'folders'>
           <div id = 'div0'>
         <img id = 'file0' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link0' class = 'links' style = 'height:35; top: 109'>About Me</div>
-        <a href = '../default%20page/aboutme.html' id = 'website0' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend0'></div></a>
+        <a href = 'https://samswaringen.github.io/default%20page/portfolio.html' id = 'website0' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend0'></div></a>
           </div>
         <div id = 'div1'>
           <img id = 'file1' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link1' class = 'links' style = 'height:35; top: 109'>Coming Soon!</div>
@@ -62,7 +62,7 @@
     </div>
     <div id = 'iframeDiv'></div>
     <div id = 'inner-Frame'>
-    <iframe src = '../default%20page/aboutme.html' id = 'newFrame' name = 'newFrame' scrolling = 'no' style = 'width: 550; height: 683;'></iframe>
+    <iframe src = 'https://samswaringen.github.io/default%20page/portfolio.html' id = 'newFrame' name = 'newFrame' scrolling = 'no' style = 'width: 550; height: 683;left: 0;top: 0;'></iframe>
     </div>
     <script src = '../navBar.js'></script> 
     <script src = 'script.js'></script>
