--- a/index.html
+++ b/index.html
@@ -16,18 +16,13 @@
       <div id = 'navBarDiv'></div>
       </header>
       <aside id = 'aside-left'>
-        <a href = 'portfolio webpage/index.html' id = 'portfolioImg'><div id = 'gifDiv' style="width:100%;height:100%;position:relative;background-image: url(cabinet_closed.jpg);">Projects</div></a>
+        <a href = 'https://samswaringen.github.io/portfolio%20webpage/' id = 'portfolioImg'><div id = 'board' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>PROJECTS</div></a>
       </aside>
     <article>
-        <iframe width="720" height="405" src="https://www.youtube.com/embed/?listType=playlist&list=PLs1pmxBvOzVpzouqMoz3oZiTqH6ADJ1b5" frameborder="0" allowfullscreen></iframe>
+        <img src = 'woodframe.png' style = 'position:absolute; left: 25%;' width = '770' height = '520'><img src = 'fire.gif'style = 'position:absolute; left: 30.15%; top: 29.5%;' width = '616' height = '351'><iframe width="616" height="353" src="https://www.youtube.com/embed/?listType=playlist&list=PLs1pmxBvOzVpzouqMoz3oZiTqH6ADJ1b5" frameborder="0" allowfullscreen></iframe>
     </article>
     <aside class = 'aside-right'>
-        <div class = 'aboutme div'> 
-            <iframe src = 'default%20page/aboutme.html'></iframe>
-        </div>
-        <div class = 'links div'>
-            <iframe src = 'default%20page/links.html'></iframe>
-        </div>
+        <div class = 'aboutme' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>ABOUT ME</div>
     </aside>
     <footer>Made by Sam Swaringen 2021</footer>
     <!--my own JS-->
