--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href = 'https://samswaringen.github.io/portfolio%20webpage/' id = 'portfolioImg'><div id = 'board' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>PROJECTS</div></a>
       </aside>
     <article>
-        <img src = 'woodframe.png' style = 'position:absolute; left: 25%;' width = '770' height = '520'><img src = 'fire.gif'style = 'position:absolute; left: 30.15%; top: 29.5%;' width = '616' height = '351'><iframe width="616" height="353" src="https://www.youtube.com/embed/?listType=playlist&list=PLs1pmxBvOzVpzouqMoz3oZiTqH6ADJ1b5" frameborder="0" allowfullscreen></iframe>
+        <img src = 'woodframe.png' style = 'position:absolute; left: 25%;' width = '770' height = '520'><img src = 'fire.gif'style = 'position:absolute; left: 30.2%; top: 29.5%;' width = '614' height = '351'><iframe id = 'iframe' width="615" height="353" src="" frameborder="0" allowfullscreen></iframe>
     </article>
     <aside class = 'aside-right'>
         <div class = 'aboutme' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>ABOUT ME</div>
