--- a/portfolio webpage/index.html
+++ b/portfolio webpage/index.html
@@ -20,7 +20,7 @@
       <div id = 'navBarDiv'></div>
       <div id = 'folders'>
           <div id = 'div0'>
-        <img id = 'file0' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link0' class = 'links' style = 'height:35; top: 109'>About Me</div>
+        <img id = 'file0' class = 'files' src = 'grayfolder.png' style = 'top: 15'><div id = 'link0' class = 'links' style = 'height:35; top: 109'>About Website</div>
         <a href = 'https://samswaringen.github.io/default%20page/portfolio.html' id = 'website0' target = 'blank'><div class = 'extend' style = 'top: 109; height:35; width: 182;' id = 'extend0'></div></a>
           </div>
         <div id = 'div1'>
