--- a/default page/aboutme.html
+++ b/default page/aboutme.html
@@ -8,6 +8,8 @@
         <p>First and foremost let me Thank You for visiting my portfolio website.
             I've been working hard to build a unique way to view my work so I hope you enojy it.
             As you know, the work is never finished so I will be updating this frequently to keep current as well as reworking older projects as I become more comfortable and competent with Javascript, HTML, and CSS.</p>
-          
+        <p><a href = 'https://github.com/samswaringen' target = 'blank'>Github</a><br>
+                <a href = 'https://www.linkedin.com/in/sam-swaringen-245611207/' target = 'blank'>Linkedin</a></p>  
+        <p>Contact me at <strong>samswaringen@gmail.com</strong></p>
     </body>
 </html>
