--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src = 'woodframe.png' style = 'position:absolute; left: 25%;' width = '770' height = '520'><img src = 'fire.gif'style = 'position:absolute; left: 30.2%; top: 29.5%;' width = '614' height = '351'><iframe id = 'iframe' width="615" height="353" src="" frameborder="0" allowfullscreen></iframe>
     </article>
     <aside class = 'aside-right'>
-        <div class = 'aboutme' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>ABOUT ME</div>
+      <a href = 'https://samswaringen.github.io/default%20page/aboutme.html'><div class = 'aboutme' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>ABOUT ME</div></a>
     </aside>
     <footer>Made by Sam Swaringen 2021</footer>
     <!--my own JS-->
