--- a/default page/aboutme.html
+++ b/default page/aboutme.html
@@ -1,15 +1,24 @@
 <html>
     <head>
         <link rel='stylesheet' type='text/css' href='style.css' /> 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     </head>
     <body>
-        <h1>My Website</h1>
-        <h2>About My Website</h2>
-        <p>First and foremost let me Thank You for visiting my portfolio website.
-            I've been working hard to build a unique way to view my work so I hope you enojy it.
-            As you know, the work is never finished so I will be updating this frequently to keep current as well as reworking older projects as I become more comfortable and competent with Javascript, HTML, and CSS.</p>
+        <h1>About Me</h1>
+        <div id = 'navBarDiv'></div>
+        <p>First and foremost let me Thank You for visiting my portfolio website!<br>
+            I've had a passion for the web ever since my family was delivered the first AOL disc when I was younger and has only grown since.
+            In college, curious to learn how programming works, I began taking some C++ courses geared toward object oriented programming and ultimately found myself working on developing simple apps for Android.
+            This led me to a career in telecommunications and for the past 13 years I've been putting the web at people's fingertips. I have loved every minute of it but it hasn't fulfilled that creative itch.
+            I began messing with the free coding lessons provided by Apple around their language Swift and it reignited the fire so I enrolled in the MIT xPro MERN stack developer certificate program.<br>
+            Here is my first foray into programming that I have made public and I don't plan on stopping here. I understand the future lies in Augmented Reality and my goal once complete with this certificate program is to enroll in future education programs geared towards bringing the web to the real world!
+            This website represents the culmination of what I have learned in the first 10 weeks of the program where we have gone over Javascript, HTML and CSS . I've been working hard to build a unique way to view my work so I hope you enjoy it.
+            As you know, the work is never finished so I will be updating this frequently to keep current as well as reworking older projects as I become more comfortable and competent with Javascript, HTML, and CSS.
+            Below are links to GitHub, LinkedIn as well as my email if you want to contact me. Resume available upon request</p>
         <p><a href = 'https://github.com/samswaringen' target = 'blank'>Github</a><br>
                 <a href = 'https://www.linkedin.com/in/sam-swaringen-245611207/' target = 'blank'>Linkedin</a></p>  
         <p>Contact me at <strong>samswaringen@gmail.com</strong></p>
     </body>
+    <script src = '../navBar.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </html>
