--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--my own CSS-->
     <link rel='stylesheet' type='text/css' href='style.css' /> 
@@ -16,13 +16,13 @@
       <div id = 'navBarDiv'></div>
       </header>
       <aside id = 'aside-left'>
-        <a href = 'https://samswaringen.github.io/portfolio%20webpage/' id = 'portfolioImg'><div id = 'board' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>PROJECTS</div></a>
+        <a href = 'https://samswaringen.github.io/portfolio%20webpage/' id = 'portfolioImg'><div class = 'linkDiv' id = 'leftDiv'></div><div id='behindLeft'></div><div id = 'board' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>PROJECTS</div></a>
       </aside>
     <article>
-        <img src = 'woodframe.png' style = 'position:absolute; left: 25%;' width = '770' height = '520'><img src = 'fire.gif'style = 'position:absolute; left: 30.15%; top: 29.5%;' width = '614' height = '351'><iframe id = 'iframe' width="615" height="353" src="" frameborder="0" allowfullscreen></iframe>
+        <img src = 'woodframe.png' style = 'position:absolute; left: 25%;' width = '770' height = '520'><div id ='fire' style = 'position:absolute; left: 30.15%; top: 29.5%; width: 614px; height: 351px; background-color: black;' ></div><iframe id = 'iframe' width="615" height="353" src="https://www.youtube.com/embed/?listType=playlist&list=PLs1pmxBvOzVpzouqMoz3oZiTqH6ADJ1b5" frameborder="0" allowfullscreen></iframe>
     </article>
     <aside class = 'aside-right'>
-      <a href = 'https://samswaringen.github.io/default%20page/aboutme.html' id = 'aboutMeLink'><div class = 'aboutme' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>ABOUT ME</div></a>
+      <a href = 'https://samswaringen.github.io/default%20page/aboutme.html' id = 'aboutMeLink'><div class = 'linkDiv' id = 'rightDiv'></div><div id = 'behindRight'></div><div class = 'aboutme' id = 'aboutme' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>ABOUT ME</div></a>
     </aside>
     <footer>Made by Sam Swaringen 2021</footer>
     <!--my own JS-->
