--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <a href = 'https://samswaringen.github.io/portfolio%20webpage/' id = 'portfolioImg'><div class = 'linkDiv' id = 'leftDiv'></div><div id='behindLeft'></div><div id = 'board' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>PROJECTS</div></a>
       </aside>
     <article>
-        <img src = 'woodframe.png' style = 'position:absolute; left: 25%;' width = '770' height = '520'><div id ='fire' style = 'position:absolute; left: 30.15%; top: 29.5%; width: 614px; height: 351px; background-color: black;' ></div><iframe id = 'iframe' width="615" height="353" src="https://www.youtube.com/embed/?listType=playlist&list=PLs1pmxBvOzVpzouqMoz3oZiTqH6ADJ1b5" frameborder="0" allowfullscreen></iframe>
+        <img src = 'woodframe.png' style = 'position:absolute; left: 25%;top: 18%;' width = '770' height = '520'><div id ='fire' style = 'position:absolute; left: 30.15%; top: 31.5%; width: 614px; height: 351px; background-color: black;' ></div><iframe id = 'iframe' width="615" height="353" src="https://www.youtube.com/embed/?listType=playlist&list=PLs1pmxBvOzVpzouqMoz3oZiTqH6ADJ1b5" frameborder="0" allowfullscreen></iframe>
     </article>
     <aside class = 'aside-right'>
       <a href = 'https://samswaringen.github.io/default%20page/aboutme.html' id = 'aboutMeLink'><div class = 'linkDiv' id = 'rightDiv'></div><div id = 'behindRight'></div><div class = 'aboutme' id = 'aboutme' style = 'background-image:url(board.png); background-size: contain; background-repeat: no-repeat; width: 320px; height: 137px;'>ABOUT ME</div></a>
     </aside>
     <footer>Made by Sam Swaringen 2021</footer>
     <!--my own JS-->
-    <script src = 'script.js'></script>
     <script src = 'navBar.js'></script>
+    <script src = 'script.js'></script>
     <!--Bootstap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
