--- a/default page/aboutme.html
+++ b/default page/aboutme.html
@@ -20,5 +20,8 @@
         <p>Contact me at <strong>samswaringen@gmail.com</strong></p>
     </body>
     <script src = '../navBar.js'></script>
+    <script>
+    document.getElementById('nav-container').classList.add('navbar-light')
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </html>
