--- a/default page/portfolio.html
+++ b/default page/portfolio.html
@@ -5,7 +5,7 @@
     <body>
         <h1>My Website</h1>
         <h2>About My Portfolio</h2>
-        <p>Highlight over a folder your interested in and watch the website load here! 
+        <p class = 'website'>Highlight over a folder your interested in and watch the website load here! 
            I've added the projects Ive worked on over the first 10 weeks of the MIT xPro Full Stack Development with MERN BootCamp.
            These projects highlight my skills with HTML, CSS and Javascript.
            I plan on continuing to update and refactor this website as well as the projects it contains as I continue my coding journey. 
