--- a/default page/aboutme.html
+++ b/default page/aboutme.html
@@ -6,6 +6,8 @@
     <body>
         <h1>About Me</h1>
         <div id = 'navBarDiv'></div>
+        <div id = 'frameDiv'><img src='goldframe.png' id = 'goldFrame' width = 500px height = 650px></div>
+        <img id = 'me' src = 'me.jpg' width = 375px height = 500px>
         <p>First and foremost let me Thank You for visiting my portfolio website!<br>
             I've had a passion for the web ever since my family was delivered the first AOL disc when I was younger and has only grown since.
             In college, curious to learn how programming works, I began taking some C++ courses geared toward object oriented programming and ultimately found myself working on developing simple apps for Android.
